lab6/altlrv4-output/main/antlr4/KotlinScriptParser.ts
// Generated from E:/Магістр/semestr1/compilers-labs/lab6/src/main/antlr4/KotlinScript.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import KotlinScriptListener from "./KotlinScriptListener.js";
import KotlinScriptVisitor from "./KotlinScriptVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class KotlinScriptParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly WS = 2;
	public static readonly Dot = 3;
	public static readonly Comma = 4;
	public static readonly Colon = 5;
	public static readonly Semicolon = 6;
	public static readonly LeftParen = 7;
	public static readonly RightParen = 8;
	public static readonly LeftBrace = 9;
	public static readonly RightBrace = 10;
	public static readonly AddOps = 11;
	public static readonly MultOps = 12;
	public static readonly RelOps = 13;
	public static readonly AssignOp = 14;
	public static readonly InlineCommentOp = 15;
	public static readonly PACKAGE = 16;
	public static readonly FUN = 17;
	public static readonly VAR = 18;
	public static readonly WHILE = 19;
	public static readonly IF = 20;
	public static readonly ELSE = 21;
	public static readonly TYPE = 22;
	public static readonly READ_LN = 23;
	public static readonly PRINT = 24;
	public static readonly ID = 25;
	public static readonly BoolLiteral = 26;
	public static readonly IntLiteral = 27;
	public static readonly RealLiteral = 28;
	public static readonly PackageId = 29;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_program = 0;
	public static readonly RULE_varTypeSpecifier = 1;
	public static readonly RULE_varDeclaration = 2;
	public static readonly RULE_varDeclarationsList = 3;
	public static readonly RULE_expression = 4;
	public static readonly RULE_term = 5;
	public static readonly RULE_factor = 6;
	public static readonly RULE_literal = 7;
	public static readonly RULE_block = 8;
	public static readonly RULE_statementsList = 9;
	public static readonly RULE_closableStatement = 10;
	public static readonly RULE_nonclosableStatement = 11;
	public static readonly RULE_declarationStatement = 12;
	public static readonly RULE_assignStatement = 13;
	public static readonly RULE_inStatement = 14;
	public static readonly RULE_outStatement = 15;
	public static readonly RULE_whileStatement = 16;
	public static readonly RULE_ifStatement = 17;
	public static readonly RULE_packageDeclaration = 18;
	public static readonly RULE_entryPointFunName = 19;
	public static readonly RULE_entryPoint = 20;
	public static readonly literalNames: (string | null)[] = [ null, "'main'", 
                                                            null, "'.'", 
                                                            "','", "':'", 
                                                            "';'", "'('", 
                                                            "')'", "'{'", 
                                                            "'}'", null, 
                                                            null, null, 
                                                            "'='", null, 
                                                            "'package'", 
                                                            "'fun'", "'var'", 
                                                            "'while'", "'if'", 
                                                            "'else'", null, 
                                                            "'readln'", 
                                                            "'print'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             "WS", "Dot", 
                                                             "Comma", "Colon", 
                                                             "Semicolon", 
                                                             "LeftParen", 
                                                             "RightParen", 
                                                             "LeftBrace", 
                                                             "RightBrace", 
                                                             "AddOps", "MultOps", 
                                                             "RelOps", "AssignOp", 
                                                             "InlineCommentOp", 
                                                             "PACKAGE", 
                                                             "FUN", "VAR", 
                                                             "WHILE", "IF", 
                                                             "ELSE", "TYPE", 
                                                             "READ_LN", 
                                                             "PRINT", "ID", 
                                                             "BoolLiteral", 
                                                             "IntLiteral", 
                                                             "RealLiteral", 
                                                             "PackageId" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"program", "varTypeSpecifier", "varDeclaration", "varDeclarationsList", 
		"expression", "term", "factor", "literal", "block", "statementsList", 
		"closableStatement", "nonclosableStatement", "declarationStatement", "assignStatement", 
		"inStatement", "outStatement", "whileStatement", "ifStatement", "packageDeclaration", 
		"entryPointFunName", "entryPoint",
	];
	public get grammarFileName(): string { return "KotlinScript.g4"; }
	public get literalNames(): (string | null)[] { return KotlinScriptParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return KotlinScriptParser.symbolicNames; }
	public get ruleNames(): string[] { return KotlinScriptParser.ruleNames; }
	public get serializedATN(): number[] { return KotlinScriptParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, KotlinScriptParser._ATN, KotlinScriptParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public program(): ProgramContext {
		let localctx: ProgramContext = new ProgramContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, KotlinScriptParser.RULE_program);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 42;
			this.packageDeclaration();
			this.state = 43;
			this.entryPoint();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varTypeSpecifier(): VarTypeSpecifierContext {
		let localctx: VarTypeSpecifierContext = new VarTypeSpecifierContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, KotlinScriptParser.RULE_varTypeSpecifier);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 45;
			this.match(KotlinScriptParser.Colon);
			this.state = 46;
			this.match(KotlinScriptParser.TYPE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDeclaration(): VarDeclarationContext {
		let localctx: VarDeclarationContext = new VarDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, KotlinScriptParser.RULE_varDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 48;
			this.match(KotlinScriptParser.ID);
			this.state = 50;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===5) {
				{
				this.state = 49;
				this.varTypeSpecifier();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varDeclarationsList(): VarDeclarationsListContext {
		let localctx: VarDeclarationsListContext = new VarDeclarationsListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, KotlinScriptParser.RULE_varDeclarationsList);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 52;
			this.varDeclaration();
			this.state = 57;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===4) {
				{
				{
				this.state = 53;
				this.match(KotlinScriptParser.Comma);
				this.state = 54;
				this.varDeclaration();
				}
				}
				this.state = 59;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public expression(): ExpressionContext {
		let localctx: ExpressionContext = new ExpressionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, KotlinScriptParser.RULE_expression);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 60;
			this.term();
			this.state = 65;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===11 || _la===13) {
				{
				{
				this.state = 61;
				_la = this._input.LA(1);
				if(!(_la===11 || _la===13)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 62;
				this.term();
				}
				}
				this.state = 67;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public term(): TermContext {
		let localctx: TermContext = new TermContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, KotlinScriptParser.RULE_term);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 68;
			this.factor();
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===12 || _la===14) {
				{
				{
				this.state = 69;
				_la = this._input.LA(1);
				if(!(_la===12 || _la===14)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 70;
				this.factor();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public factor(): FactorContext {
		let localctx: FactorContext = new FactorContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, KotlinScriptParser.RULE_factor);
		try {
			this.state = 82;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 25:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 76;
				this.match(KotlinScriptParser.ID);
				}
				break;
			case 26:
			case 27:
			case 28:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 77;
				this.literal();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 78;
				this.match(KotlinScriptParser.LeftParen);
				this.state = 79;
				this.expression();
				this.state = 80;
				this.match(KotlinScriptParser.RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public literal(): LiteralContext {
		let localctx: LiteralContext = new LiteralContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, KotlinScriptParser.RULE_literal);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 84;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 469762048) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let localctx: BlockContext = new BlockContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, KotlinScriptParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 86;
			this.match(KotlinScriptParser.LeftBrace);
			this.state = 88;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 52166656) !== 0)) {
				{
				this.state = 87;
				this.statementsList();
				}
			}

			this.state = 90;
			this.match(KotlinScriptParser.RightBrace);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public statementsList(): StatementsListContext {
		let localctx: StatementsListContext = new StatementsListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, KotlinScriptParser.RULE_statementsList);
		let _la: number;
		try {
			this.state = 104;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 18:
			case 24:
			case 25:
				this.enterOuterAlt(localctx, 1);
				{
				{
				this.state = 92;
				this.closableStatement();
				this.state = 98;
				this._errHandler.sync(this);
				switch ( this._interp.adaptivePredict(this._input, 7, this._ctx) ) {
				case 1:
					{
					this.state = 94;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===6) {
						{
						this.state = 93;
						this.match(KotlinScriptParser.Semicolon);
						}
					}

					}
					break;
				case 2:
					{
					{
					this.state = 96;
					this.match(KotlinScriptParser.Semicolon);
					this.state = 97;
					this.statementsList();
					}
					}
					break;
				}
				}
				}
				break;
			case 19:
			case 20:
				this.enterOuterAlt(localctx, 2);
				{
				{
				this.state = 100;
				this.nonclosableStatement();
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 52166656) !== 0)) {
					{
					this.state = 101;
					this.statementsList();
					}
				}

				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public closableStatement(): ClosableStatementContext {
		let localctx: ClosableStatementContext = new ClosableStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, KotlinScriptParser.RULE_closableStatement);
		try {
			this.state = 110;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 106;
				this.assignStatement();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 107;
				this.declarationStatement();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 108;
				this.inStatement();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 109;
				this.outStatement();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public nonclosableStatement(): NonclosableStatementContext {
		let localctx: NonclosableStatementContext = new NonclosableStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, KotlinScriptParser.RULE_nonclosableStatement);
		try {
			this.state = 114;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 19:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 112;
				this.whileStatement();
				}
				break;
			case 20:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 113;
				this.ifStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public declarationStatement(): DeclarationStatementContext {
		let localctx: DeclarationStatementContext = new DeclarationStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, KotlinScriptParser.RULE_declarationStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 116;
			this.match(KotlinScriptParser.VAR);
			this.state = 117;
			this.varDeclaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public assignStatement(): AssignStatementContext {
		let localctx: AssignStatementContext = new AssignStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, KotlinScriptParser.RULE_assignStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===18) {
				{
				this.state = 119;
				this.match(KotlinScriptParser.VAR);
				}
			}

			this.state = 122;
			this.varDeclaration();
			this.state = 123;
			this.match(KotlinScriptParser.AssignOp);
			this.state = 124;
			this.expression();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public inStatement(): InStatementContext {
		let localctx: InStatementContext = new InStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, KotlinScriptParser.RULE_inStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			this.match(KotlinScriptParser.VAR);
			this.state = 127;
			this.varDeclaration();
			this.state = 128;
			this.match(KotlinScriptParser.AssignOp);
			this.state = 129;
			this.match(KotlinScriptParser.READ_LN);
			this.state = 130;
			this.match(KotlinScriptParser.LeftParen);
			this.state = 131;
			this.match(KotlinScriptParser.RightParen);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public outStatement(): OutStatementContext {
		let localctx: OutStatementContext = new OutStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, KotlinScriptParser.RULE_outStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 133;
			this.match(KotlinScriptParser.PRINT);
			this.state = 134;
			this.match(KotlinScriptParser.LeftParen);
			this.state = 135;
			this.expression();
			this.state = 136;
			this.match(KotlinScriptParser.RightParen);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public whileStatement(): WhileStatementContext {
		let localctx: WhileStatementContext = new WhileStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, KotlinScriptParser.RULE_whileStatement);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 138;
			this.match(KotlinScriptParser.WHILE);
			this.state = 139;
			this.match(KotlinScriptParser.LeftParen);
			this.state = 140;
			this.expression();
			this.state = 141;
			this.match(KotlinScriptParser.RightParen);
			this.state = 142;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public ifStatement(): IfStatementContext {
		let localctx: IfStatementContext = new IfStatementContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, KotlinScriptParser.RULE_ifStatement);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 144;
			this.match(KotlinScriptParser.IF);
			this.state = 145;
			this.match(KotlinScriptParser.LeftParen);
			this.state = 146;
			this.expression();
			this.state = 147;
			this.match(KotlinScriptParser.RightParen);
			this.state = 148;
			this.block();
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===21) {
				{
				this.state = 149;
				this.match(KotlinScriptParser.ELSE);
				this.state = 152;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case 20:
					{
					this.state = 150;
					this.ifStatement();
					}
					break;
				case 9:
					{
					this.state = 151;
					this.block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public packageDeclaration(): PackageDeclarationContext {
		let localctx: PackageDeclarationContext = new PackageDeclarationContext(this, this._ctx, this.state);
		this.enterRule(localctx, 36, KotlinScriptParser.RULE_packageDeclaration);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 156;
			this.match(KotlinScriptParser.PACKAGE);
			this.state = 157;
			this.match(KotlinScriptParser.PackageId);
			this.state = 158;
			this.match(KotlinScriptParser.Semicolon);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public entryPointFunName(): EntryPointFunNameContext {
		let localctx: EntryPointFunNameContext = new EntryPointFunNameContext(this, this._ctx, this.state);
		this.enterRule(localctx, 38, KotlinScriptParser.RULE_entryPointFunName);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 160;
			this.match(KotlinScriptParser.T__0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public entryPoint(): EntryPointContext {
		let localctx: EntryPointContext = new EntryPointContext(this, this._ctx, this.state);
		this.enterRule(localctx, 40, KotlinScriptParser.RULE_entryPoint);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 162;
			this.match(KotlinScriptParser.FUN);
			this.state = 163;
			this.entryPointFunName();
			this.state = 164;
			this.match(KotlinScriptParser.LeftParen);
			this.state = 166;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===25) {
				{
				this.state = 165;
				this.varDeclarationsList();
				}
			}

			this.state = 168;
			this.match(KotlinScriptParser.RightParen);
			this.state = 169;
			this.block();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!KotlinScriptParser.__ATN) {
			KotlinScriptParser.__ATN = new ATNDeserializer().deserialize(KotlinScriptParser._serializedATN);
		}

		return KotlinScriptParser.__ATN;
	}


	static DecisionsToDFA = KotlinScriptParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class ProgramContext extends ParserRuleContext {
	constructor(parser?: KotlinScriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public packageDeclaration(): PackageDeclarationContext {
		return this.getTypedRuleContext(PackageDeclarationContext, 0) as PackageDeclarationContext;
	}
	public entryPoint(): EntryPointContext {
		return this.getTypedRuleContext(EntryPointContext, 0) as EntryPointContext;
	}
    public get ruleIndex(): number {
    	return KotlinScriptParser.RULE_program;
	}
	public enterRule(listener: KotlinScriptListener): void {
	    if(listener.enterProgram) {
	 		listener.enterProgram(this);
		}
	}
	public exitRule(listener: KotlinScriptListener): void {
	    if(listener.exitProgram) {
	 		listener.exitProgram(this);
		}
	}
	// @Override
	public accept<Result>(visitor: KotlinScriptVisitor<Result>): Result {
		if (visitor.visitProgram) {
			return visitor.visitProgram(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class VarTypeSpecifierContext extends ParserRuleContext {
	constructor(parser?: KotlinScriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public Colon(): TerminalNode {
		return this.getToken(KotlinScriptParser.Colon, 0);
	}
	public TYPE(): TerminalNode {
		return this.getToken(KotlinScriptParser.TYPE, 0);
	}
    public get ruleIndex(): number {
    	return KotlinScriptParser.RULE_varTypeSpecifier;
	}
	public enterRule(listener: KotlinScriptListener): void {
	    if(listener.enterVarTypeSpecifier) {
	 		listener.enterVarTypeSpecifier(this);
		}
	}
	public exitRule(listener: KotlinScriptListener): void {
	    if(listener.exitVarTypeSpecifier) {
	 		listener.exitVarTypeSpecifier(this);
		}
	}
	// @Override
	public accept<Result>(visitor: KotlinScriptVisitor<Result>): Result {
		if (visitor.visitVarTypeSpecifier) {
			return visitor.visitVarTypeSpecifier(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}


export class VarDeclarationContext extends ParserRuleContext {
	constructor(parser?: KotlinScriptParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public ID(): TerminalNode {
		return this.getToken(KotlinScriptParser.ID, 0);
	}
	public varTypeSpecifier(): VarTypeSpecifierContext {
		return this.getTypedRuleContext(VarTypeSpecifierContext, 0) as VarTypeSpecifierContext;
	}
    public get ruleIndex(): number {
    	return KotlinScriptParser.RULE_varDeclaration;
	}
	public enterRule(listener: KotlinScriptListener): void {
	    if(listener.enterVarDeclaration) {
	 		listener.enterVarDeclaration(this);
		}
	}
	public exitRule(listener: KotlinScriptListener): void {
	    if(listener.exitVarDeclaration) {
	 		listener.exitVarDeclaration(this);
		}
	}
	// @Override
	public accept<Result>(visitor: KotlinScriptVisitor<Result>): Result {
		if (visitor.visitVarDeclaration) {
			return visitor.visitVarDeclaration(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

